# github-basic-python

./: .editorconfig  .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  branch_ruleset_main.json  pyproject.toml  requirements.txt
.claude/docs/: agent-peer-review.md  agent-plan-review.md  agent-prohibitions.md  agent-security-guidelines.md  agent-workflow-reference.md
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  feature.yml  feature_request.md
.github/workflows/: ci.yml  pr-triage.yml
src/: main.py
tests/: test_main.py
