[project]
name = "project-name"
version = "0.1.0"
description = "한 줄 소개"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# E/F=pyflakes+pycodestyle, I=isort, UP=pyupgrade, B=bugbear
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]   # bare `pytest`가 리포 루트를 sys.path에 넣어 src/ import 가능
